WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218680
REGRESSION (
r268476
): Sometimes zooming does not work on purpleair.com/map
https://bugs.webkit.org/show_bug.cgi?id=218680
Summary
REGRESSION (r268476): Sometimes zooming does not work on purpleair.com/map
Simon Fraser (smfr)
Reported
2020-11-06 21:25:38 PST
REGRESSION (
r268476
): Sometimes zooming does not worki on purpleair.com/map
Attachments
Patch
(10.47 KB, patch)
2020-11-06 21:28 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-11-06 21:28:03 PST
Created
attachment 413516
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-11-06 21:28:06 PST
<
rdar://problem/70418612
>
EWS
Comment 3
2020-11-07 10:15:42 PST
Committed
r269561
: <
https://trac.webkit.org/changeset/269561
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413516
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug