Source/WebCore: REGRESSION (r268476): Sometimes zooming does not work on purpleair.com/map https://bugs.webkit.org/show_bug.cgi?id=218680 <rdar://problem/70418612>

Reviewed by Zalan Bujtas.

Loading purpleair.com/map and quickly panning then zooming would often fail to zoom the map,
and rubberband instead. This happened because the composited layer containing the WebGL
canvas would switch to into tiled mode, and that would fail to set the event region on the
new platform layer.

The fix is to just add the 'EventRegionChanged' flag to the list of properties that need to
get updated after a tiled layer switch.

Test: fast/scrolling/mac/wheel-event-listener-region-tiled-layer-switch.html

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::determineWheelEventProcessing):
* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::changeLayerTypeTo):

LayoutTests:
REGRESSION (r268476): Sometimes zooming does not worki on purpleair.com/map
https://bugs.webkit.org/show_bug.cgi?id=218680

Reviewed by Zalan Bujtas.

* fast/scrolling/mac/wheel-event-listener-region-tiled-layer-switch-expected.txt: Added.
* fast/scrolling/mac/wheel-event-listener-region-tiled-layer-switch.html: Added.


Canonical link: https://commits.webkit.org/231352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269561 268f45cc-cd09-0410-ab3c-d52691b4dbfc